--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "full3",
+  "name": "full3-w",
   "version": "1.0.0",
-  "description": "Proyecto tercera unidad Materia Fullstack",
+  "description": "Proyecto con mssql",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "Full3"
+    "url": "Full3-w"
   },
-  "author": "yael avila melendez",
+  "author": "Yael Avila Melendez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mssql": "^10.0.1",
-    "mysql": "^2.18.1"
+    "express": "^4.18.2"
   }
 }
