--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Yael Avila Melendez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mssql": "^10.0.1"
   }
 }
